ENH:add some translate
Change-Id: Ic635f5f85f67662339edd28d87a4a37232d5bc0e

--- a/bbl/i18n/list.txt
+++ b/bbl/i18n/list.txt
@@ -106,6 +106,7 @@ src/slic3r/GUI/KBShortcutsDialog.cpp
 src/slic3r/GUI/ReleaseNote.cpp
 src/slic3r/GUI/ReleaseNote.hpp
 src/slic3r/GUI/UpgradePanel.cpp
+src/slic3r/GUI/UnsavedChangesDialog.cpp
 src/slic3r/Utils/FixModelByWin10.cpp
 src/slic3r/Utils/PresetUpdater.cpp
 src/slic3r/Utils/Http.cpp
