--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -555,6 +555,9 @@ msgstr ""
 
 msgid "Login information expired. Please login again."
 msgstr "Login abgelaufen. Bitte neu einloggen."
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "Lade"
@@ -2202,6 +2205,11 @@ msgstr ""
 "Ja - Automatisches Umschalten auf ein geradliniges Muster\n"
 "Nein - Dichte automatisch auf den Standardwert von nicht 100% zurücksetzen"
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "Automatische Druckbettnivellierung"
 
@@ -2365,9 +2373,6 @@ msgstr "Werkzeug"
 msgid "Layer Time"
 msgstr "Schichtdauer"
 
-msgid "Layer Time (log)"
-msgstr "Schichtdauer (Protokoll)"
-
 msgid "Height: "
 msgstr "Höhe:"
 
@@ -2382,9 +2387,6 @@ msgstr "Fluss: "
 
 msgid "Layer Time: "
 msgstr "Schichtdauer:"
-
-msgid "Layer Time(log): "
-msgstr "Schichtdauer (Protokoll): "
 
 msgid "Fan Speed: "
 msgstr "Lüftergeschwindigkeit: "
@@ -2401,8 +2403,23 @@ msgstr "Erzeugen von Geometrie-Eckpunktdaten"
 msgid "Generating geometry index data"
 msgstr "Erzeugung von Geometrie-Indexdaten"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "Anzeigen"
+
+msgid "Flushed"
+msgstr "Gespült"
+
+msgid "Total"
+msgstr "Gesamt"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "Gesamtdauer"
 
 msgid "up to"
 msgstr "bis zu"
@@ -2446,17 +2463,8 @@ msgstr "Volumetrische Flussrate (mm³/s)"
 msgid "Layer Time (s)"
 msgstr ""
 
-msgid "Layer Time (log) (s)"
-msgstr ""
-
 msgid "Used filament"
 msgstr "Genutztes Filament"
-
-msgid "Flushed"
-msgstr "Gespült"
-
-msgid "Total"
-msgstr "Gesamt"
 
 msgid "Travel"
 msgstr "Eilgang"
@@ -2520,9 +2528,6 @@ msgstr "Vorbereitungszeit"
 
 msgid "Model printing time"
 msgstr "Druckzeit des Modell"
-
-msgid "Total time"
-msgstr "Gesamtdauer"
 
 msgid "Switch to silent mode"
 msgstr "Zum Leisemodus wechseln"
@@ -2640,6 +2645,12 @@ msgstr "Montageansicht"
 
 msgid "Select Plate"
 msgstr "Druckplatte wählen"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "Zurücksetzen der Montage"
@@ -3802,6 +3813,14 @@ msgstr ""
 "ausgewählten Filamentvoreinstellungen und Farben gelöscht. Möchten Sie "
 "fortfahren?"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr ""
 "Es gibt keine kompatiblen Filamente und die Synchronisierung wird nicht "
@@ -3900,6 +3919,12 @@ msgid ""
 msgstr ""
 "Die Version %s von 3mf ist neuer als die Version %s von %s, wir schlagen "
 "vor, Ihre Software zu aktualisieren."
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "die 3mf ist nicht kompatibel, laden nur von Geometriedaten!"
@@ -4154,8 +4179,8 @@ msgstr ""
 msgid "Invalid number"
 msgstr "Ungültige Nummer"
 
-msgid "Select Bed Type"
-msgstr "Druckbetttyp auswählen"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4770,21 +4795,6 @@ msgid "The printer does not support sending to printer SD card."
 msgstr ""
 "Der Drucker unterstützt nicht das Senden an die MicroSD-Karte des Druckers."
 
-msgid "Same as Global Bed Type"
-msgstr "Entspricht dem allgemeinen Bettyp"
-
-msgid "Cool Plate"
-msgstr "kalte Druckplatte"
-
-msgid "Engineering Plate"
-msgstr "technische Druckplatte"
-
-msgid "High Temp Plate"
-msgstr "Hochtemperaturdruckplatte"
-
-msgid "Textured PEI Plate"
-msgstr "Texturierte PEI-Platte"
-
 msgid "Log in printer"
 msgstr "Drucker anmelden"
 
@@ -5025,6 +5035,9 @@ msgstr ""
 "wird. Ein Wert von 0 bedeutet, dass das Filament das Drucken auf der "
 "technischen Druckplatte nicht unterstützt."
 
+msgid "High Temp Plate"
+msgstr "Hochtemperaturdruckplatte"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -5032,6 +5045,9 @@ msgstr ""
 "Dies ist die Betttemperatur, wenn die Hochtemperaturdruckplatte installiert "
 "ist. Ein Wert von 0 bedeutet, dass das Filament das Drucken auf der "
 "Hochtemperaturdruckplatte nicht unterstützt."
+
+msgid "Textured PEI Plate"
+msgstr "Texturierte PEI-Platte"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5433,8 +5449,8 @@ msgstr "Werkzeugleiste"
 msgid "Objects list"
 msgstr "Liste der Objekte"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
-msgstr "Importieren Sie Geometriedaten aus STL/STEP/3MF/OBJ/AMF-Dateien."
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "Zu Zwischenablage kopieren"
@@ -6389,6 +6405,12 @@ msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Vom Drucker unterstützte Druckbettypen"
+
+msgid "Cool Plate"
+msgstr "kalte Druckplatte"
+
+msgid "Engineering Plate"
+msgstr "technische Druckplatte"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr ""
@@ -8334,6 +8356,22 @@ msgstr ""
 "den Bereich verwendet, um den Druck zu beschleunigen. Andernfalls wird "
 "standardmäßig ein geradliniges Muster verwendet."
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "Exportiere 3MF"
 
@@ -8792,6 +8830,21 @@ msgstr ""
 "Festigkeit verbessern\n"
 "Wussten Sie, dass Sie die Festigkeit des Modells durch mehr Wandschleifen "
 "und eine höhere Dichte der Füllung verbessern können?"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "Schichtdauer (Protokoll)"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "Schichtdauer (Protokoll): "
+
+#~ msgid "Select Bed Type"
+#~ msgstr "Druckbetttyp auswählen"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "Entspricht dem allgemeinen Bettyp"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr "Importieren Sie Geometriedaten aus STL/STEP/3MF/OBJ/AMF-Dateien."
 
 #~ msgid "\\u2103"
 #~ msgstr "\\ u2103"
