--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -552,6 +552,9 @@ msgstr ""
 
 msgid "Login information expired. Please login again."
 msgstr "Los datos de acceso han caducado. Por favor, inicie sesión de nuevo."
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "Cargando"
@@ -2169,6 +2172,11 @@ msgstr ""
 "Yes - Switch to rectilinear pattern automatically\n"
 "No  - Reset density to default non 100% value automatically"
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "Nivelación de cama automática"
 
@@ -2335,9 +2343,6 @@ msgstr "Herramienta"
 msgid "Layer Time"
 msgstr "Layer Time"
 
-msgid "Layer Time (log)"
-msgstr "Layer Time (log)"
-
 msgid "Height: "
 msgstr "Height: "
 
@@ -2352,9 +2357,6 @@ msgstr "Flow: "
 
 msgid "Layer Time: "
 msgstr "Layer Time: "
-
-msgid "Layer Time(log): "
-msgstr "Layer Time(log): "
 
 msgid "Fan Speed: "
 msgstr "Fan Speed: "
@@ -2371,8 +2373,23 @@ msgstr "Generación de datos de vértices de la geometría"
 msgid "Generating geometry index data"
 msgstr "Generación de datos de índices geométricos"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "Pantalla"
+
+msgid "Flushed"
+msgstr "Flushed"
+
+msgid "Total"
+msgstr "Total"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "Total time"
 
 msgid "up to"
 msgstr "hasta"
@@ -2416,17 +2433,8 @@ msgstr "Tasa de flujo volumétrico (mm³/seg)"
 msgid "Layer Time (s)"
 msgstr ""
 
-msgid "Layer Time (log) (s)"
-msgstr ""
-
 msgid "Used filament"
 msgstr "Filamento usado"
-
-msgid "Flushed"
-msgstr "Flushed"
-
-msgid "Total"
-msgstr "Total"
 
 msgid "Travel"
 msgstr "Recorrido"
@@ -2490,9 +2498,6 @@ msgstr "Planificar tiempo"
 
 msgid "Model printing time"
 msgstr "Tiempo de impresión del modelo"
-
-msgid "Total time"
-msgstr "Total time"
 
 msgid "Switch to silent mode"
 msgstr "Cambiar al modo silencioso"
@@ -2610,6 +2615,12 @@ msgstr "Vista de conjunto"
 
 msgid "Select Plate"
 msgstr "Seleccione la placa"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "Volver a montar"
@@ -3759,6 +3770,14 @@ msgstr ""
 "Sync filaments with AMS will drop all current selected filament presets and "
 "colors. Do you want to continue?"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "There are no compatible filaments, and sync is not performed."
 
@@ -3852,6 +3871,12 @@ msgid ""
 msgstr ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
 "software."
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "The 3mf is not compatible, loading geometry data only!"
@@ -4103,8 +4128,8 @@ msgstr ""
 msgid "Invalid number"
 msgstr "Número inválido"
 
-msgid "Select Bed Type"
-msgstr "Select Bed Type"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4706,21 +4731,6 @@ msgstr "The printer is required to be on the same LAN as Bambu Studio."
 msgid "The printer does not support sending to printer SD card."
 msgstr "The printer does not support sending to printer MicroSD card."
 
-msgid "Same as Global Bed Type"
-msgstr "Same as Global Bed Type"
-
-msgid "Cool Plate"
-msgstr "Placa fría"
-
-msgid "Engineering Plate"
-msgstr "Placa de ingeniería"
-
-msgid "High Temp Plate"
-msgstr "Placa de alta temperatura"
-
-msgid "Textured PEI Plate"
-msgstr "Textured PEI Plate"
-
 msgid "Log in printer"
 msgstr "Iniciar sesión en la impresora"
 
@@ -4956,6 +4966,9 @@ msgstr ""
 "instalada. Un valor de 0 significa que el filamento no admite la impresión "
 "en la placa de ingeniería."
 
+msgid "High Temp Plate"
+msgstr "Placa de alta temperatura"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -4963,6 +4976,9 @@ msgstr ""
 "Esta es la temperatura de la cama cuando la placa de alta temperatura está "
 "instalada. Un valor de 0 significa que el filamento no admite la impresión "
 "en la placa de alta temperatura."
+
+msgid "Textured PEI Plate"
+msgstr "Textured PEI Plate"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5357,8 +5373,8 @@ msgstr "Barra de herramientas"
 msgid "Objects list"
 msgstr "Lista de objetos"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
-msgstr "Importación de datos geométricos desde archivos STL/STEP/3MF/OBJ/AMF."
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "Copiar al portapapeles"
@@ -6298,6 +6314,12 @@ msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Tipos de cama que admite la impresora"
+
+msgid "Cool Plate"
+msgstr "Placa fría"
+
+msgid "Engineering Plate"
+msgstr "Placa de ingeniería"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "Este código G se inserta en cada cambio de capa antes de levantar z"
@@ -8224,6 +8246,22 @@ msgstr ""
 "acelerar la impresión. De lo contrario, se utilizará por defecto un patrón "
 "rectilíneo."
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "Exportar 3MF"
 
@@ -8672,6 +8710,22 @@ msgstr ""
 "Improve strength\n"
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "Layer Time (log)"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "Layer Time(log): "
+
+#~ msgid "Select Bed Type"
+#~ msgstr "Select Bed Type"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "Same as Global Bed Type"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr ""
+#~ "Importación de datos geométricos desde archivos STL/STEP/3MF/OBJ/AMF."
 
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
