--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -554,6 +554,9 @@ msgstr ""
 
 msgid "Login information expired. Please login again."
 msgstr "Les informations de connexion ont expiré. Veuillez vous reconnecter."
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "Chargement"
@@ -2150,6 +2153,11 @@ msgstr ""
 "Yes - Switch to rectilinear pattern automatically\n"
 "No  - Reset density to default non 100% value automatically"
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "Niveau de plateau automatique"
 
@@ -2311,9 +2319,6 @@ msgstr "Outil"
 msgid "Layer Time"
 msgstr "Layer Time"
 
-msgid "Layer Time (log)"
-msgstr "Layer Time (log)"
-
 msgid "Height: "
 msgstr "Height: "
 
@@ -2328,9 +2333,6 @@ msgstr "Flow: "
 
 msgid "Layer Time: "
 msgstr "Layer Time: "
-
-msgid "Layer Time(log): "
-msgstr "Layer Time(log): "
 
 msgid "Fan Speed: "
 msgstr "Fan Speed: "
@@ -2347,8 +2349,23 @@ msgstr "Génération de données de sommet de géométrie"
 msgid "Generating geometry index data"
 msgstr "Génération de données d'index de géométrie"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "Affichage"
+
+msgid "Flushed"
+msgstr "Flushed"
+
+msgid "Total"
+msgstr "Total"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "Total time"
 
 msgid "up to"
 msgstr "jusqu'à"
@@ -2392,17 +2409,8 @@ msgstr "Débit volumétrique (mm³/s)"
 msgid "Layer Time (s)"
 msgstr ""
 
-msgid "Layer Time (log) (s)"
-msgstr ""
-
 msgid "Used filament"
 msgstr "Filament usagé"
-
-msgid "Flushed"
-msgstr "Flushed"
-
-msgid "Total"
-msgstr "Total"
 
 msgid "Travel"
 msgstr "Voyager"
@@ -2466,9 +2474,6 @@ msgstr "Temps de préparation"
 
 msgid "Model printing time"
 msgstr "Temps d'impression du modèle"
-
-msgid "Total time"
-msgstr "Total time"
 
 msgid "Switch to silent mode"
 msgstr "Passer en mode silencieux"
@@ -2586,6 +2591,12 @@ msgstr "Vue de l'assemblage"
 
 msgid "Select Plate"
 msgstr "Sélectionner la plaque"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "Retour d'assemblage"
@@ -3733,6 +3744,14 @@ msgstr ""
 "Sync filaments with AMS will drop all current selected filament presets and "
 "colors. Do you want to continue?"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "There are no compatible filaments, and sync is not performed."
 
@@ -3825,6 +3844,12 @@ msgid ""
 msgstr ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
 "software."
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "The 3mf is not compatible, loading geometry data only!"
@@ -4078,8 +4103,8 @@ msgstr ""
 msgid "Invalid number"
 msgstr "Numéro invalide"
 
-msgid "Select Bed Type"
-msgstr "Select Bed Type"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4682,21 +4707,6 @@ msgstr "The printer is required to be on the same LAN as Bambu Studio."
 msgid "The printer does not support sending to printer SD card."
 msgstr "The printer does not support sending to printer MicroSD card."
 
-msgid "Same as Global Bed Type"
-msgstr "Same as Global Bed Type"
-
-msgid "Cool Plate"
-msgstr "Assiette froide"
-
-msgid "Engineering Plate"
-msgstr "Plaque d'ingénierie"
-
-msgid "High Temp Plate"
-msgstr "Plaque haute température"
-
-msgid "Textured PEI Plate"
-msgstr "Textured PEI Plate"
-
 msgid "Log in printer"
 msgstr "Connectez-vous à l'imprimante"
 
@@ -4933,6 +4943,9 @@ msgstr ""
 "(\"Engineering plate\") est installé. Une valeur à 0 signifie que ce "
 "filament ne peut pas être imprimé sur le plateau technique."
 
+msgid "High Temp Plate"
+msgstr "Plaque haute température"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -4940,6 +4953,9 @@ msgstr ""
 "Il s'agit de la température du plateau lorsque le plateau haute température "
 "(\"Cool plate\") est installé. Une valeur à 0 signifie que ce filament ne "
 "peut pas être imprimé sur le plateau haute température."
+
+msgid "Textured PEI Plate"
+msgstr "Textured PEI Plate"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5341,9 +5357,8 @@ msgstr "Barre d'outils"
 msgid "Objects list"
 msgstr "Liste des objets"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
 msgstr ""
-"Importez des données de géométrie à partir de fichiers STL/STEP/3MF/OBJ/AMF."
 
 msgid "Copy to clipboard"
 msgstr "Copier dans le presse-papier"
@@ -6284,6 +6299,12 @@ msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Types de lit pris en charge par l'imprimante"
+
+msgid "Cool Plate"
+msgstr "Assiette froide"
+
+msgid "Engineering Plate"
+msgstr "Plaque d'ingénierie"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "Ce G-code est inséré à chaque changement de couche avant de soulever z"
@@ -8221,6 +8242,22 @@ msgstr ""
 "afin d'accélérer l'impression. Sinon, le motif rectiligne est utilisé par "
 "défaut."
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "Exporter 3MF"
 
@@ -8673,6 +8710,23 @@ msgstr ""
 "Improve strength\n"
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "Layer Time (log)"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "Layer Time(log): "
+
+#~ msgid "Select Bed Type"
+#~ msgstr "Select Bed Type"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "Same as Global Bed Type"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr ""
+#~ "Importez des données de géométrie à partir de fichiers STL/STEP/3MF/OBJ/"
+#~ "AMF."
 
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
