--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -549,6 +549,9 @@ msgstr ""
 
 msgid "Login information expired. Please login again."
 msgstr "A bejelentkezési adatok érvénytelenek. Kérjük, jelentkezz be újra."
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "Betöltés"
@@ -2157,6 +2160,11 @@ msgstr ""
 "Yes - Switch to rectilinear pattern automatically\n"
 "No  - Reset density to default non 100% value automatically"
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "Automatikus asztalszintezés"
 
@@ -2320,9 +2328,6 @@ msgstr "Szerszám"
 msgid "Layer Time"
 msgstr "Layer Time"
 
-msgid "Layer Time (log)"
-msgstr "Layer Time (log)"
-
 msgid "Height: "
 msgstr "Height: "
 
@@ -2337,9 +2342,6 @@ msgstr "Flow: "
 
 msgid "Layer Time: "
 msgstr "Layer Time: "
-
-msgid "Layer Time(log): "
-msgstr "Layer Time(log): "
 
 msgid "Fan Speed: "
 msgstr "Fan Speed: "
@@ -2356,8 +2358,23 @@ msgstr "Geometriai vertex adatok generálása"
 msgid "Generating geometry index data"
 msgstr "Geometriai index adatok generálása"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "Megjelenítés"
+
+msgid "Flushed"
+msgstr "Flushed"
+
+msgid "Total"
+msgstr "Összesen"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "Total time"
 
 msgid "up to"
 msgstr "legfeljebb"
@@ -2401,17 +2418,8 @@ msgstr "Térfogatáramlás (mm³/s)"
 msgid "Layer Time (s)"
 msgstr ""
 
-msgid "Layer Time (log) (s)"
-msgstr ""
-
 msgid "Used filament"
 msgstr "Használt filament"
-
-msgid "Flushed"
-msgstr "Flushed"
-
-msgid "Total"
-msgstr "Összesen"
 
 msgid "Travel"
 msgstr "Mozgás"
@@ -2475,9 +2483,6 @@ msgstr "Előkészítési idő"
 
 msgid "Model printing time"
 msgstr "Modell nyomtatási ideje"
-
-msgid "Total time"
-msgstr "Total time"
 
 msgid "Switch to silent mode"
 msgstr "Váltás csendes módra"
@@ -2595,6 +2600,12 @@ msgstr "Összeszerelési nézet"
 
 msgid "Select Plate"
 msgstr "Tálca kiválasztása"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "Vissza az összeszereléshez"
@@ -3743,6 +3754,14 @@ msgstr ""
 "Sync filaments with AMS will drop all current selected filament presets and "
 "colors. Do you want to continue?"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "There are no compatible filaments, and sync is not performed."
 
@@ -3835,6 +3854,12 @@ msgid ""
 msgstr ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
 "software."
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "The 3mf is not compatible, loading geometry data only!"
@@ -4083,8 +4108,8 @@ msgstr ""
 msgid "Invalid number"
 msgstr "Érvénytelen szám"
 
-msgid "Select Bed Type"
-msgstr "Select Bed Type"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4677,21 +4702,6 @@ msgstr "The printer is required to be on the same LAN as Bambu Studio."
 msgid "The printer does not support sending to printer SD card."
 msgstr "The printer does not support sending to printer MicroSD card."
 
-msgid "Same as Global Bed Type"
-msgstr "Same as Global Bed Type"
-
-msgid "Cool Plate"
-msgstr "Cool Plate"
-
-msgid "Engineering Plate"
-msgstr "Engineering Plate"
-
-msgid "High Temp Plate"
-msgstr "High Temp Plate"
-
-msgid "Textured PEI Plate"
-msgstr "Textured PEI Plate"
-
 msgid "Log in printer"
 msgstr "Bejelentkezés a nyomtatóra"
 
@@ -4922,6 +4932,9 @@ msgstr ""
 "Asztalhőmérséklet a mérnöki tálca használatával. A 0 érték azt jelenti, hogy "
 "a filament nem támogatja az Engineering Plate-re történő nyomtatást"
 
+msgid "High Temp Plate"
+msgstr "High Temp Plate"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -4929,6 +4942,9 @@ msgstr ""
 "Asztalhőmérséklet a magas hőmérsékletű tálca használatával. A 0 érték azt "
 "jelenti, hogy a filament nem támogatja a High Temp Plate-re történő "
 "nyomtatást"
+
+msgid "Textured PEI Plate"
+msgstr "Textured PEI Plate"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5323,8 +5339,8 @@ msgstr "Eszköztár"
 msgid "Objects list"
 msgstr "Objektumok listája"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
-msgstr "Geometriai adatok importálása STL/STEP/3MF/OBJ/AMF fájlokból."
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "Másolás a vágólapra"
@@ -6259,6 +6275,12 @@ msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Nyomtató által támogatott asztaltípusok"
+
+msgid "Cool Plate"
+msgstr "Cool Plate"
+
+msgid "Engineering Plate"
+msgstr "Engineering Plate"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "Ez a G-kód minden rétegváltáshoz bekerül a Z tengely emelése előtt."
@@ -8178,6 +8200,22 @@ msgstr ""
 "területen a koncentrikus mintát fogja használni. Ellenkező esetben "
 "alapértelmezés szerint az egyenes vonalú mintát használja."
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "3MF exportálása"
 
@@ -8624,6 +8662,21 @@ msgstr ""
 "Improve strength\n"
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "Layer Time (log)"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "Layer Time(log): "
+
+#~ msgid "Select Bed Type"
+#~ msgstr "Select Bed Type"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "Same as Global Bed Type"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr "Geometriai adatok importálása STL/STEP/3MF/OBJ/AMF fájlokból."
 
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
