--- a/bbl/i18n/it/BambuStudio_it.po
+++ b/bbl/i18n/it/BambuStudio_it.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -543,6 +543,9 @@ msgstr ""
 
 msgid "Login information expired. Please login again."
 msgstr "Login information expired. Please login again."
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "Caricamento"
@@ -2133,6 +2136,11 @@ msgstr ""
 "Yes - Switch to rectilinear pattern automatically\n"
 "No  - Reset density to default non 100% value automatically"
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "Auto bed leveling"
 
@@ -2296,9 +2304,6 @@ msgstr "Strumento"
 msgid "Layer Time"
 msgstr "Layer Time"
 
-msgid "Layer Time (log)"
-msgstr "Layer Time (log)"
-
 msgid "Height: "
 msgstr "Height: "
 
@@ -2313,9 +2318,6 @@ msgstr "Flow: "
 
 msgid "Layer Time: "
 msgstr "Layer Time: "
-
-msgid "Layer Time(log): "
-msgstr "Layer Time(log): "
 
 msgid "Fan Speed: "
 msgstr "Fan Speed: "
@@ -2332,8 +2334,23 @@ msgstr "Generating geometry vertex data"
 msgid "Generating geometry index data"
 msgstr "Generating geometry index data"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "Display"
+
+msgid "Flushed"
+msgstr "Flushed"
+
+msgid "Total"
+msgstr "Totale"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "Total time"
 
 msgid "up to"
 msgstr "fino a"
@@ -2377,17 +2394,8 @@ msgstr "Flusso volumetrico (mm³/s)"
 msgid "Layer Time (s)"
 msgstr ""
 
-msgid "Layer Time (log) (s)"
-msgstr ""
-
 msgid "Used filament"
 msgstr "Filamento usato"
-
-msgid "Flushed"
-msgstr "Flushed"
-
-msgid "Total"
-msgstr "Totale"
 
 msgid "Travel"
 msgstr "Spostamento"
@@ -2451,9 +2459,6 @@ msgstr "Prepare time"
 
 msgid "Model printing time"
 msgstr "Model printing time"
-
-msgid "Total time"
-msgstr "Total time"
 
 msgid "Switch to silent mode"
 msgstr "Switch to silent mode"
@@ -2571,6 +2576,12 @@ msgstr "Assembly View"
 
 msgid "Select Plate"
 msgstr "Select Plate"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "Assembly Return"
@@ -3718,6 +3729,14 @@ msgstr ""
 "Sync filaments with AMS will drop all current selected filament presets and "
 "colors. Do you want to continue?"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "There are no compatible filaments, and sync is not performed."
 
@@ -3811,6 +3830,12 @@ msgid ""
 msgstr ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
 "software."
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "The 3mf is not compatible, loading geometry data only!"
@@ -4054,8 +4079,8 @@ msgstr "Custom supports and color painting were removed before repairing."
 msgid "Invalid number"
 msgstr "Invalid number"
 
-msgid "Select Bed Type"
-msgstr "Select Bed Type"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4643,21 +4668,6 @@ msgstr "The printer is required to be on the same LAN as Bambu Studio."
 msgid "The printer does not support sending to printer SD card."
 msgstr "The printer does not support sending to printer MicroSD card."
 
-msgid "Same as Global Bed Type"
-msgstr "Same as Global Bed Type"
-
-msgid "Cool Plate"
-msgstr "Cool Plate"
-
-msgid "Engineering Plate"
-msgstr "Engineering Plate"
-
-msgid "High Temp Plate"
-msgstr "High Temp Plate"
-
-msgid "Textured PEI Plate"
-msgstr "Textured PEI Plate"
-
 msgid "Log in printer"
 msgstr "Log in printer"
 
@@ -4886,6 +4896,9 @@ msgstr ""
 "This is the bed temperature when the engineering plate is installed. A value "
 "of 0 means the filament does not support printing on the Engineering Plate."
 
+msgid "High Temp Plate"
+msgstr "High Temp Plate"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -4893,6 +4906,9 @@ msgstr ""
 "This is the bed temperature when the high temperature plate is installed. A "
 "value of 0 means the filament does not support printing on the High Temp "
 "Plate."
+
+msgid "Textured PEI Plate"
+msgstr "Textured PEI Plate"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5284,8 +5300,8 @@ msgstr "Toolbar"
 msgid "Objects list"
 msgstr "Objects list"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
-msgstr "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "Copia negli appunti"
@@ -6206,6 +6222,12 @@ msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Bed types supported by the printer"
+
+msgid "Cool Plate"
+msgstr "Cool Plate"
+
+msgid "Engineering Plate"
+msgstr "Engineering Plate"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "This G-code is inserted at every layer change before lifting z."
@@ -8102,6 +8124,22 @@ msgstr ""
 "the concentric pattern will be used for the area to speed up printing. "
 "Otherwise, the rectilinear pattern will be used by default."
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "Esporta 3MF"
 
@@ -8548,6 +8586,21 @@ msgstr ""
 "Improve strength\n"
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "Layer Time (log)"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "Layer Time(log): "
+
+#~ msgid "Select Bed Type"
+#~ msgstr "Select Bed Type"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "Same as Global Bed Type"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
 
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
