--- a/bbl/i18n/ja/BambuStudio_ja.po
+++ b/bbl/i18n/ja/BambuStudio_ja.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -538,6 +538,9 @@ msgstr ""
 
 msgid "Login information expired. Please login again."
 msgstr "サインイン情報の有効期限切れ、もう一度サインインしてください"
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "ロード中"
@@ -2071,6 +2074,11 @@ msgstr ""
 "はい - 直線パターンに切り替えます\n"
 "いいえ - 充填密度をリセットします"
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "自動ベッドレベリング"
 
@@ -2233,9 +2241,6 @@ msgstr "ツール"
 msgid "Layer Time"
 msgstr "積層時間"
 
-msgid "Layer Time (log)"
-msgstr "積層時間 (Log)"
-
 msgid "Height: "
 msgstr "高度"
 
@@ -2250,9 +2255,6 @@ msgstr "フロー"
 
 msgid "Layer Time: "
 msgstr "積層時間"
-
-msgid "Layer Time(log): "
-msgstr "積層時間 (log)"
 
 msgid "Fan Speed: "
 msgstr "ファン回転速度"
@@ -2269,8 +2271,23 @@ msgstr "ジオメトリ頂点データを生成"
 msgid "Generating geometry index data"
 msgstr "ジオメトリ・インデックス・データを生成"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "表示"
+
+msgid "Flushed"
+msgstr "フラッシュ"
+
+msgid "Total"
+msgstr "合計"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "総時間"
 
 msgid "up to"
 msgstr "最大"
@@ -2314,17 +2331,8 @@ msgstr "流量 (mm³/s)"
 msgid "Layer Time (s)"
 msgstr ""
 
-msgid "Layer Time (log) (s)"
-msgstr ""
-
 msgid "Used filament"
 msgstr "フィラメント使用量"
-
-msgid "Flushed"
-msgstr "フラッシュ"
-
-msgid "Total"
-msgstr "合計"
 
 msgid "Travel"
 msgstr "移動"
@@ -2388,9 +2396,6 @@ msgstr "準備時間"
 
 msgid "Model printing time"
 msgstr "モデル造形時間"
-
-msgid "Total time"
-msgstr "総時間"
 
 msgid "Switch to silent mode"
 msgstr "サイレントモードに切り替える"
@@ -2508,6 +2513,12 @@ msgstr "組立て"
 
 msgid "Select Plate"
 msgstr "プレートを選択"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "戻る"
@@ -3639,6 +3650,14 @@ msgid ""
 msgstr ""
 "AMSと同期する場合、現在のフィラメント設定が上書きされます。続行しますか？"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "適用できるフィラメントがありません、同期を行えません"
 
@@ -3725,6 +3744,12 @@ msgid ""
 "software."
 msgstr ""
 "3mfのバージョン%sは%sの%sより新しい為、ソフトウェアを更新してください。"
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
@@ -3965,8 +3990,8 @@ msgstr ""
 msgid "Invalid number"
 msgstr "無効な数字"
 
-msgid "Select Bed Type"
-msgstr "ベッドタイプを選択"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4530,21 +4555,6 @@ msgstr ""
 msgid "The printer does not support sending to printer SD card."
 msgstr "このプリンターはSDカードに送信することができません"
 
-msgid "Same as Global Bed Type"
-msgstr "全般設定の「ベッドタイプ」と同様"
-
-msgid "Cool Plate"
-msgstr "常温プレート"
-
-msgid "Engineering Plate"
-msgstr "エンジニアリングプレート"
-
-msgid "High Temp Plate"
-msgstr "高温プレート"
-
-msgid "Textured PEI Plate"
-msgstr "PEIプレート"
-
 msgid "Log in printer"
 msgstr "プリンターを登録"
 
@@ -4761,12 +4771,18 @@ msgstr ""
 "エンジニアリングプレートが装着時のベッド温度です。値が0の場合、フィラメントが"
 "エンジニアリングプレートに使用できない意味です。"
 
+msgid "High Temp Plate"
+msgstr "高温プレート"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
 msgstr ""
 "高温プレートが装着時のベッド温度です。値が0の場合、フィラメントが高温プレート"
 "に使用できない意味です。"
+
+msgid "Textured PEI Plate"
+msgstr "PEIプレート"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5144,8 +5160,8 @@ msgstr "ツールバー"
 msgid "Objects list"
 msgstr "オブジェクト一覧"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
-msgstr "STL/STEP/3MF/OBJ/AMF ファイルからジオメトリデータをインポート"
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "コピー"
@@ -6027,6 +6043,12 @@ msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "適応ベッド種類"
+
+msgid "Cool Plate"
+msgstr "常温プレート"
+
+msgid "Engineering Plate"
+msgstr "エンジニアリングプレート"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "積層が変わる直前に実行するG-codeです。"
@@ -7793,6 +7815,22 @@ msgstr ""
 "合、狭い領域は同心パターンを使用し、それ以外の領域は、直線パターンを使用しま"
 "す。"
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "3mf をエクスポート"
 
@@ -8212,6 +8250,21 @@ msgid ""
 msgstr ""
 "強度の向上\n"
 "壁面層数やインフィルの充填密度を増やして造形強度を向上できます。"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "積層時間 (Log)"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "積層時間 (log)"
+
+#~ msgid "Select Bed Type"
+#~ msgstr "ベッドタイプを選択"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "全般設定の「ベッドタイプ」と同様"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr "STL/STEP/3MF/OBJ/AMF ファイルからジオメトリデータをインポート"
 
 #~ msgid "\\u2103"
 #~ msgstr "u2103"
