--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -547,6 +547,9 @@ msgstr ""
 
 msgid "Login information expired. Please login again."
 msgstr "Uw inlog is verlopen. Log alstublieft opnieuw in."
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "Laden"
@@ -2169,6 +2172,11 @@ msgstr ""
 "Yes - Switch to rectilinear pattern automatically\n"
 "No  - Reset density to default non 100% value automatically"
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "Automatisch bed levellen"
 
@@ -2332,9 +2340,6 @@ msgstr "Hulpmiddel"
 msgid "Layer Time"
 msgstr "Layer Time"
 
-msgid "Layer Time (log)"
-msgstr "Layer Time (log)"
-
 msgid "Height: "
 msgstr "Height: "
 
@@ -2349,9 +2354,6 @@ msgstr "Flow: "
 
 msgid "Layer Time: "
 msgstr "Layer Time: "
-
-msgid "Layer Time(log): "
-msgstr "Layer Time(log): "
 
 msgid "Fan Speed: "
 msgstr "Fan Speed: "
@@ -2368,8 +2370,23 @@ msgstr "Geometrische hoekpuntgegevens genereren"
 msgid "Generating geometry index data"
 msgstr "Geometrie-indexgegevens genereren"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "Tonen"
+
+msgid "Flushed"
+msgstr "Flushed"
+
+msgid "Total"
+msgstr "Totaal"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "Total time"
 
 msgid "up to"
 msgstr "tot"
@@ -2413,17 +2430,8 @@ msgstr "Volumestroom (mm³/s)"
 msgid "Layer Time (s)"
 msgstr ""
 
-msgid "Layer Time (log) (s)"
-msgstr ""
-
 msgid "Used filament"
 msgstr "Verbruikt filament"
-
-msgid "Flushed"
-msgstr "Flushed"
-
-msgid "Total"
-msgstr "Totaal"
 
 msgid "Travel"
 msgstr "Verplaatsen"
@@ -2487,9 +2495,6 @@ msgstr "Voorbereidingstijd"
 
 msgid "Model printing time"
 msgstr "Model print tijd"
-
-msgid "Total time"
-msgstr "Total time"
 
 msgid "Switch to silent mode"
 msgstr "Omzetten naar stille modus"
@@ -2607,6 +2612,12 @@ msgstr "Montageweergave"
 
 msgid "Select Plate"
 msgstr "Printbed selecteren"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "Montage terug"
@@ -3762,6 +3773,14 @@ msgstr ""
 "Sync filaments with AMS will drop all current selected filament presets and "
 "colors. Do you want to continue?"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "There are no compatible filaments, and sync is not performed."
 
@@ -3855,6 +3874,12 @@ msgid ""
 msgstr ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
 "software."
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "The 3mf is not compatible, loading geometry data only!"
@@ -4107,8 +4132,8 @@ msgstr ""
 msgid "Invalid number"
 msgstr "Ongeldig nummer"
 
-msgid "Select Bed Type"
-msgstr "Select Bed Type"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4709,21 +4734,6 @@ msgstr "The printer is required to be on the same LAN as Bambu Studio."
 msgid "The printer does not support sending to printer SD card."
 msgstr "The printer does not support sending to printer MicroSD card."
 
-msgid "Same as Global Bed Type"
-msgstr "Same as Global Bed Type"
-
-msgid "Cool Plate"
-msgstr "Cool (koud) printbed"
-
-msgid "Engineering Plate"
-msgstr "Engineering plate (technisch printbed)"
-
-msgid "High Temp Plate"
-msgstr "High Temp Plate (hoge temperatuur printbed)"
-
-msgid "Textured PEI Plate"
-msgstr "Textured PEI Plate"
-
 msgid "Log in printer"
 msgstr "Inloggen op printer"
 
@@ -4958,6 +4968,9 @@ msgstr ""
 "waarde van 0 betekent dat het filament afdrukken op de Engineering Plate "
 "niet ondersteunt."
 
+msgid "High Temp Plate"
+msgstr "High Temp Plate (hoge temperatuur printbed)"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -4965,6 +4978,9 @@ msgstr ""
 "Dit is de bedtemperatuur wanneer de hogetemperatuurplaat is geïnstalleerd. "
 "Een waarde van 0 betekent dat het filament printen op de High Temp Plate "
 "niet ondersteunt."
+
+msgid "Textured PEI Plate"
+msgstr "Textured PEI Plate"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5365,8 +5381,8 @@ msgstr "Gereedschapsbalk"
 msgid "Objects list"
 msgstr "Object lijst"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
-msgstr "Importeer geometrische data uit STL/STEP/3MF/OBJ/AMF bestanden."
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "Kopieer naar klembord"
@@ -6302,6 +6318,12 @@ msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Printbedden ondersteund door de printer"
+
+msgid "Cool Plate"
+msgstr "Cool (koud) printbed"
+
+msgid "Engineering Plate"
+msgstr "Engineering plate (technisch printbed)"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr ""
@@ -8240,6 +8262,22 @@ msgstr ""
 "het gebied om het afdrukken te versnellen. Anders wordt standaard het "
 "rechtlijnige patroon gebruikt."
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "Exporteer 3mf"
 
@@ -8688,6 +8726,21 @@ msgstr ""
 "Improve strength\n"
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "Layer Time (log)"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "Layer Time(log): "
+
+#~ msgid "Select Bed Type"
+#~ msgstr "Select Bed Type"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "Same as Global Bed Type"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr "Importeer geometrische data uit STL/STEP/3MF/OBJ/AMF bestanden."
 
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
