--- a/bbl/i18n/sv/BambuStudio_sv.po
+++ b/bbl/i18n/sv/BambuStudio_sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -547,6 +547,9 @@ msgstr ""
 
 msgid "Login information expired. Please login again."
 msgstr "Inloggningsinformationen har löpt ut. Logga in igen."
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "Laddar"
@@ -2151,6 +2154,11 @@ msgstr ""
 "Ja - Växla automatiskt till rätlinjigt mönster\n"
 "Nej - Återställ automatiskt densiteten till standardvärdet som inte är 100 %."
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "Auto justera byggplattan"
 
@@ -2314,9 +2322,6 @@ msgstr "Verktyg"
 msgid "Layer Time"
 msgstr "Lager tid"
 
-msgid "Layer Time (log)"
-msgstr "Lagertid (logg)"
-
 msgid "Height: "
 msgstr "Höjd: "
 
@@ -2331,9 +2336,6 @@ msgstr "Flöde: "
 
 msgid "Layer Time: "
 msgstr "Lager Tid: "
-
-msgid "Layer Time(log): "
-msgstr "Lagertid (logg): "
 
 msgid "Fan Speed: "
 msgstr "Fläkthastighet: "
@@ -2350,8 +2352,23 @@ msgstr "Genererar geometrisk vertex data"
 msgid "Generating geometry index data"
 msgstr "Genererar geometrisk index data"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "Visa"
+
+msgid "Flushed"
+msgstr "Rensad"
+
+msgid "Total"
+msgstr "Totalt"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "Total tid"
 
 msgid "up to"
 msgstr "upp till"
@@ -2395,17 +2412,8 @@ msgstr "Volymetrisk flödeshastighet (mm³/s)"
 msgid "Layer Time (s)"
 msgstr ""
 
-msgid "Layer Time (log) (s)"
-msgstr ""
-
 msgid "Used filament"
 msgstr "Använt filament"
-
-msgid "Flushed"
-msgstr "Rensad"
-
-msgid "Total"
-msgstr "Totalt"
 
 msgid "Travel"
 msgstr "Flytta"
@@ -2469,9 +2477,6 @@ msgstr "Förbered tid"
 
 msgid "Model printing time"
 msgstr "Utskriftstid för modellen"
-
-msgid "Total time"
-msgstr "Total tid"
 
 msgid "Switch to silent mode"
 msgstr "Ändra till tyst läge"
@@ -2589,6 +2594,12 @@ msgstr "Monterings vy"
 
 msgid "Select Plate"
 msgstr "Välj Byggplatta"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "Monterings retur"
@@ -3736,6 +3747,14 @@ msgstr ""
 "Synkronisering av filament med AMS kommer att ta bort alla förvalda filament "
 "inställningar och färger. Vill du fortsätta?"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "Det finns inga kompatibla filament och synkronisering utförs inte."
 
@@ -3829,6 +3848,12 @@ msgid ""
 msgstr ""
 "3mf:s version %s är nyare än %s version %s, Föreslår att du uppdaterar din "
 "programvara."
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "The 3mf is not compatible, loading geometry data only!"
@@ -4074,8 +4099,8 @@ msgstr "Custom support och färgläggning raderades innan reparation."
 msgid "Invalid number"
 msgstr "Ogiltligt nummer"
 
-msgid "Select Bed Type"
-msgstr "Välj typ av byggplatta"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4665,21 +4690,6 @@ msgstr "Skrivaren måste finnas på samma LAN som Bambu Studio."
 msgid "The printer does not support sending to printer SD card."
 msgstr "Skrivaren har inte stöd för att skicka till skrivarens MicroSD kort."
 
-msgid "Same as Global Bed Type"
-msgstr "Samma som Global Bed Type"
-
-msgid "Cool Plate"
-msgstr "Cool Plate"
-
-msgid "Engineering Plate"
-msgstr "Engineering Plate"
-
-msgid "High Temp Plate"
-msgstr "High Temp Plate"
-
-msgid "Textured PEI Plate"
-msgstr "Texturerad PEI-platta"
-
 msgid "Log in printer"
 msgstr "Logga in skrivare"
 
@@ -4912,12 +4922,18 @@ msgstr ""
 "Detta är byggplattans temperatur när Engineering Plate är installerad. Ett "
 "värde på 0 betyder att filamentet inte stöder utskrift på Engineering Plate."
 
+msgid "High Temp Plate"
+msgstr "High Temp Plate"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
 msgstr ""
 "Detta är byggplattans temperatur när High Temp Plate är installerad. Värdet "
 "0 betyder att filamentet inte stöder utskrift på High Temp Plate."
+
+msgid "Textured PEI Plate"
+msgstr "Texturerad PEI-platta"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5314,8 +5330,8 @@ msgstr "Verktygsfält"
 msgid "Objects list"
 msgstr "Objektlista"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
-msgstr "Importera geometri data från STL/STEP/3MF/OBJ/AMF filer."
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "Kopiera till urklipp"
@@ -6223,6 +6239,12 @@ msgstr ""
 
 msgid "Bed types supported by the printer"
 msgstr "Byggplattans typ stöds av skrivaren"
+
+msgid "Cool Plate"
+msgstr "Cool Plate"
+
+msgid "Engineering Plate"
+msgstr "Engineering Plate"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "Denna G-kod används för varje lager innan Z axis lyfts"
@@ -8120,6 +8142,22 @@ msgstr ""
 "påskynda utskriften. Annars kommer mönstret med räta linjer att användas som "
 "standard."
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "Exportera 3mf"
 
@@ -8567,6 +8605,21 @@ msgstr ""
 "Förbättra styrkan\n"
 "Visste du att du kan använda fler väggslingor och högre gles fyllningstäthet "
 "för att förbättra modellens styrka?"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "Lagertid (logg)"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "Lagertid (logg): "
+
+#~ msgid "Select Bed Type"
+#~ msgstr "Välj typ av byggplatta"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "Samma som Global Bed Type"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr "Importera geometri data från STL/STEP/3MF/OBJ/AMF filer."
 
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
