--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 19:23+0800\n"
+"POT-Creation-Date: 2023-02-16 09:32+0800\n"
 "PO-Revision-Date: 2023-01-12 14:46+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -537,6 +537,9 @@ msgstr "Bambu Studio版本过低，需要更新到最新版本方可正常使用
 
 msgid "Login information expired. Please login again."
 msgstr "登录信息过期。请重新登录。"
+
+msgid "Privacy Policy"
+msgstr ""
 
 msgid "Loading"
 msgstr "载入中"
@@ -1609,27 +1612,27 @@ msgid "Print with the filament mounted on the back of chassis"
 msgstr "使用机箱背后挂载的材料打印"
 
 msgid "Cabin humidity"
-msgstr ""
+msgstr "舱内湿度"
 
 msgid ""
 "Green means that AMS humidity is normal, orange represent humidity is high, "
 "red represent humidity is too high.(Hygrometer: lower the better.)"
-msgstr ""
+msgstr "绿色表示 AMS 湿度正常，橙色表示湿度高，红色表示湿度过高。(湿度计:越低越好。)"
 
 msgid "Desiccant status"
-msgstr ""
+msgstr "干燥剂状态"
 
 msgid ""
 "A desiccant status lower than two bars indicates that desiccant may be "
 "inactive. Please change the desiccant.(The bars: higher the better.)"
-msgstr ""
+msgstr "干燥剂状态低于两格表示干燥剂可能不活跃。请更换干燥剂。(杠: 越高越好)。"
 
 msgid ""
 "Note: When the lid is open or the desiccant pack is changed, it can take "
 "hours or a night to absorb the moisture. Low temperatures also slow down the "
 "process. During this time, the indicator may not represent the chamber "
 "accurately."
-msgstr ""
+msgstr "注意:当盖子打开或更换干燥剂包装时，可能需要数小时或一晚才能吸收水分，低温也会减慢这一过程。在此期间，指示器的数值可能并不准确。"
 
 msgid ""
 "Config which AMS slot should be used for a filament used in the print job"
@@ -2051,6 +2054,11 @@ msgstr ""
 "是 - 自动切换到直线图案\n"
 "否 - 自动将密度重置为默认的非100%值"
 
+msgid ""
+"While printing by Object, the extruder may collide skirt.\n"
+"Thus, reset the skirt layer to 1 to avoid that."
+msgstr ""
+
 msgid "Auto bed leveling"
 msgstr "自动热床调平"
 
@@ -2214,9 +2222,6 @@ msgstr "工具"
 msgid "Layer Time"
 msgstr "层时间"
 
-msgid "Layer Time (log)"
-msgstr "层时间（log）"
-
 msgid "Height: "
 msgstr "层高: "
 
@@ -2231,9 +2236,6 @@ msgstr "挤出流量: "
 
 msgid "Layer Time: "
 msgstr "层时间"
-
-msgid "Layer Time(log): "
-msgstr "层时间（log）："
 
 msgid "Fan Speed: "
 msgstr "风扇速度: "
@@ -2250,8 +2252,23 @@ msgstr "正在生成几何顶点数据"
 msgid "Generating geometry index data"
 msgstr "正在生成几何索引数据"
 
+msgid "Statistics of All Plates"
+msgstr ""
+
 msgid "Display"
 msgstr "显示"
+
+msgid "Flushed"
+msgstr "冲刷"
+
+msgid "Total"
+msgstr "总计"
+
+msgid "Total Time Estimation"
+msgstr ""
+
+msgid "Total time"
+msgstr "总时间"
 
 msgid "up to"
 msgstr "达到"
@@ -2295,17 +2312,8 @@ msgstr "体积流量速度（mm³/s）"
 msgid "Layer Time (s)"
 msgstr "层时间（s）"
 
-msgid "Layer Time (log) (s)"
-msgstr "层时间（log）（s）"
-
 msgid "Used filament"
 msgstr "使用的耗材丝"
-
-msgid "Flushed"
-msgstr "冲刷"
-
-msgid "Total"
-msgstr "总计"
 
 msgid "Travel"
 msgstr "空驶"
@@ -2369,9 +2377,6 @@ msgstr "准备时间"
 
 msgid "Model printing time"
 msgstr "模型打印时间"
-
-msgid "Total time"
-msgstr "总时间"
 
 msgid "Switch to silent mode"
 msgstr "切换到静音模式"
@@ -2490,6 +2495,12 @@ msgstr "装配体视图"
 
 msgid "Select Plate"
 msgstr "选择盘"
+
+msgid "All Plates"
+msgstr ""
+
+msgid "Stats"
+msgstr ""
 
 msgid "Assembly Return"
 msgstr "退出装配体视图"
@@ -3616,6 +3627,14 @@ msgid ""
 "colors. Do you want to continue?"
 msgstr "同步到 AMS 的材料列表将丢弃所有当前配置的材料预设、颜色。是否继续？"
 
+msgid ""
+"Already did a synchronization, do you want to update only changes or resync "
+"all?"
+msgstr ""
+
+msgid "Resync"
+msgstr ""
+
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "没有如任何兼容的材料，同步操作未执行。"
 
@@ -3696,6 +3715,12 @@ msgid ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
 "software."
 msgstr "该3mf的版本%s比%s的版本%s要新，建议升级你的软件。"
+
+msgid "Invalid values found in the 3mf:"
+msgstr ""
+
+msgid "Please correct them in the param tabs"
+msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
 msgstr "该3mf文件与软件不兼容，将只加载几何数据。"
@@ -3928,8 +3953,8 @@ msgstr "自定义的支撑和涂色在模型修复之前将被清除。"
 msgid "Invalid number"
 msgstr "无效数字"
 
-msgid "Select Bed Type"
-msgstr "选择热床类型"
+msgid "Plate Settings"
+msgstr ""
 
 #, boost-format
 msgid "Part name: %1%\n"
@@ -4500,21 +4525,6 @@ msgstr "打印机需要与Bambu Studio在同一个局域网内。"
 msgid "The printer does not support sending to printer SD card."
 msgstr "该打印机不支持发送到打印机SD卡。"
 
-msgid "Same as Global Bed Type"
-msgstr "跟随全局热床类型"
-
-msgid "Cool Plate"
-msgstr "低温打印热床"
-
-msgid "Engineering Plate"
-msgstr "工程材料热床"
-
-msgid "High Temp Plate"
-msgstr "高温打印热床"
-
-msgid "Textured PEI Plate"
-msgstr "纹理PEI热床"
-
 msgid "Log in printer"
 msgstr "登录打印机"
 
@@ -4726,10 +4736,16 @@ msgid ""
 "filament does not support to print on the Engineering Plate"
 msgstr "安装工程材料热床时的热床温度。0值表示这个耗材丝不支持工程材料热床"
 
+msgid "High Temp Plate"
+msgstr "高温打印热床"
+
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
 msgstr "安装高温打印热床时的热床温度。0值表示这个耗材丝不支持高温打印热床"
+
+msgid "Textured PEI Plate"
+msgstr "纹理PEI热床"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5099,8 +5115,8 @@ msgstr "工具栏"
 msgid "Objects list"
 msgstr "对象列表"
 
-msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
-msgstr "从STL/STEP/3MF/OBJ/AMF文件中导入几何数据"
+msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "复制到剪贴板"
@@ -5945,6 +5961,12 @@ msgstr "首层热床温度。0值表示这个耗材丝不支持纹理PEI热床"
 
 msgid "Bed types supported by the printer"
 msgstr "打印机所支持的热床类型"
+
+msgid "Cool Plate"
+msgstr "低温打印热床"
+
+msgid "Engineering Plate"
+msgstr "工程材料热床"
 
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "在每次换层抬升z高度之前插入这段G-code"
@@ -7661,6 +7683,22 @@ msgstr ""
 "此选项用于自动识别内部狭窄的实心填充。开启后，将对狭窄实心区域使用同心填充加"
 "快打印速度。否则使用默认的直线填充。"
 
+msgid "invalid value "
+msgstr ""
+
+#, c-format, boost-format
+msgid " doesn't work at 100%% density "
+msgstr ""
+
+msgid "Invalid value when spiral vase mode is enabled: "
+msgstr ""
+
+msgid "too large line width "
+msgstr ""
+
+msgid " not in range "
+msgstr ""
+
 msgid "Export 3MF"
 msgstr "导出3MF"
 
@@ -8083,6 +8121,24 @@ msgid ""
 msgstr ""
 "提高强度\n"
 "你知道吗？你可以使用更多的墙层数和更高的疏散填充密度来提高模型的强度。"
+
+#~ msgid "Layer Time (log)"
+#~ msgstr "层时间（log）"
+
+#~ msgid "Layer Time(log): "
+#~ msgstr "层时间（log）："
+
+#~ msgid "Layer Time (log) (s)"
+#~ msgstr "层时间（log）（s）"
+
+#~ msgid "Select Bed Type"
+#~ msgstr "选择热床类型"
+
+#~ msgid "Same as Global Bed Type"
+#~ msgstr "跟随全局热床类型"
+
+#~ msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
+#~ msgstr "从STL/STEP/3MF/OBJ/AMF文件中导入几何数据"
 
 #~ msgid "Plate %d: %s does not support filament %s (%s)."
 #~ msgstr "盘%d：%s不支持耗材丝%s（%s）。"
