--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-16 09:32+0800\n"
+"POT-Creation-Date: 2023-02-16 16:32+0800\n"
 "PO-Revision-Date: 2023-01-12 14:46+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -1543,14 +1543,14 @@ msgstr "热床温度"
 msgid "Max volumetric speed"
 msgstr "最大体积速度"
 
-msgid "℃"
+msgid "\\u2103"
 msgstr ""
 
 msgid "Bed temperature"
 msgstr "床温"
 
-msgid "mm³"
-msgstr "mm³"
+msgid "mm\\u00B3"
+msgstr ""
 
 msgid "Start calibration"
 msgstr "开始"
@@ -1617,7 +1617,8 @@ msgstr "舱内湿度"
 msgid ""
 "Green means that AMS humidity is normal, orange represent humidity is high, "
 "red represent humidity is too high.(Hygrometer: lower the better.)"
-msgstr "绿色表示 AMS 湿度正常，橙色表示湿度高，红色表示湿度过高。(湿度计:越低越好。)"
+msgstr ""
+"绿色表示 AMS 湿度正常，橙色表示湿度高，红色表示湿度过高。(湿度计:越低越好。)"
 
 msgid "Desiccant status"
 msgstr "干燥剂状态"
@@ -1632,7 +1633,9 @@ msgid ""
 "hours or a night to absorb the moisture. Low temperatures also slow down the "
 "process. During this time, the indicator may not represent the chamber "
 "accurately."
-msgstr "注意:当盖子打开或更换干燥剂包装时，可能需要数小时或一晚才能吸收水分，低温也会减慢这一过程。在此期间，指示器的数值可能并不准确。"
+msgstr ""
+"注意:当盖子打开或更换干燥剂包装时，可能需要数小时或一晚才能吸收水分，低温也会"
+"减慢这一过程。在此期间，指示器的数值可能并不准确。"
 
 msgid ""
 "Config which AMS slot should be used for a filament used in the print job"
@@ -3628,12 +3631,15 @@ msgid ""
 msgstr "同步到 AMS 的材料列表将丢弃所有当前配置的材料预设、颜色。是否继续？"
 
 msgid ""
-"Already did a synchronization, do you want to update only changes or resync "
+"Already did a synchronization, do you want to sync only changes or resync "
 "all?"
-msgstr ""
+msgstr "已经同步过，你希望仅同步改变的材料还是重新同步所有材料？"
+
+msgid "Sync"
+msgstr "同步"
 
 msgid "Resync"
-msgstr ""
+msgstr "重新同步"
 
 msgid "There are no compatible filaments, and sync is not performed."
 msgstr "没有如任何兼容的材料，同步操作未执行。"
@@ -6405,6 +6411,9 @@ msgstr "mm³/s"
 
 msgid "Minimal purge on wipe tower"
 msgstr "擦拭塔上的最小清理量"
+
+msgid "mm³"
+msgstr "mm³"
 
 msgid "Filament load time"
 msgstr "加载耗材丝的时间"
@@ -9216,9 +9225,6 @@ msgstr ""
 
 #~ msgid "GUI"
 #~ msgstr "界面"
-
-#~ msgid "Sync"
-#~ msgstr "同步"
 
 #~ msgid "Shortcuts"
 #~ msgstr "快捷键"
